# npak-c

./: meson.build  readme.md
include/npak/: errors.h  npak.h  types.h  visibility.h
src/: errors.c  npak.c  types.c
tests/: errors.c  npak.c
